welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: value unary_!_= is not a member of Boolean
while(!haveBaggle()=true) {
      ^